updated button links on main page, updated icon image (re-retesting, shoulda done that before pushing), tested expo send link, a bit tedious, need to get deployed

--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/img/logo.png",
+    "icon": "./src/img/iconLogoResize.png",
     "splash": {
       "image": "./src/img/logo.png",
       "resizeMode": "contain",
