--- a/app.json
+++ b/app.json
@@ -5,13 +5,13 @@
     "slug": "SkateFoundApp",
     "privacy": "public",
     "sdkVersion": "30.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": { 
-      "image": "./src/img/iconLogoResize.png",
-      "backgroundColor": "#ffffff"   
-    },
+    "icon": "./src/img/iconLogoResize.png",
     "splash": {
       "image": "./src/img/logo.png",
       "resizeMode": "contain",
@@ -20,7 +20,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
