--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "expo": "^30.0.2",
+    "expo-cli": "^2.7.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
-    "react-native-material-menu": "^0.4.1"
+    "react-native-material-menu": "^0.4.2"
   }
 }
