working on scrollTo method in componentDidUpdate. Reorganized folder structure

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "The S-Kate App",
+    "name": "The SKate App",
     "description": "http://theskatefoundation.org/ App built using ReactNative.js and Expo. Republish test. ",
     "slug": "S-KateApp",
     "privacy": "public",
